--- a/CoreAPIWithAngular/KnowledgeSystemAPI.csproj
+++ b/CoreAPIWithAngular/KnowledgeSystemAPI.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KnowledgeSystemAPI.DataAccess\KnowledgeSystemAPI.DataAccess.csproj" />
+    <ProjectReference Include="..\KnowledgeSystemAPI.Handlers\KnowledgeSystemAPI.Handlers.csproj" />
   </ItemGroup>
 
 </Project>
