--- a/CoreAPIWithAngular/appsettings.Development.json
+++ b/CoreAPIWithAngular/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "Connection": "Server=(localdb)\\MSSQLLocalDB;Database=KnowledgeSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
