--- a/KnowledgeSystemWEB/package.json
+++ b/KnowledgeSystemWEB/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.1.1",
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
