--- a/KnowledgeSystemWEB/angular.json
+++ b/KnowledgeSystemWEB/angular.json
@@ -29,7 +29,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/angular-notifier/styles.scss",
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.js",
@@ -95,6 +97,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
