--- a/KnowledgeSystemWEB/package.json
+++ b/KnowledgeSystemWEB/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "@auth0/angular-jwt": "^5.0.2",
+    "angular-notifier": "^6.0.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.3.0",
     "jquery": "^3.5.1",
